--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ find_package(catkin REQUIRED COMPONENTS
 
 find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED system)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(OGRE_OV OGRE)
 
 # Catkin
 catkin_package(
